cluster/portainer/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portainer-route
  namespace: portainer
  annotations:
    k8s-dns.nathanv.me/hostname: portainer.nathanv.app
    k8s-dns.nathanv.me/external: tunnel.nathanv.app
    k8s-dns.nathanv.me/internal: reverse-proxy.svc.nathanv.home
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`portainer.nathanv.app`)
    kind: Rule
    services:
    - name: portainer
      port: 9000
  tls:
    certResolver: le
    domains:
    - sans:
      - "*.nathanv.app"
